--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <a href="/login"><ion-icon name="caret-back-sharp"></ion-icon></a>
+    <a href="/login" ><ion-img style="margin: 0 auto; max-width: 30vh;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/Logo_DuocUC.svg/1067px-Logo_DuocUC.svg.png"></ion-img> 
+      <ion-icon name="arrow-back-outline" style="font-size: 25px;"></ion-icon>
+    </a>
     <ion-title>
-      
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -22,7 +23,9 @@
 </ion-content>
 
 <ion-footer>
+  <center>
   <ion-toolbar>
     <ion-title>Bienvenido @usuario</ion-title>
   </ion-toolbar>
+</center>
 </ion-footer>
