--- a/src/app/restablecer/restablecer.page.html
+++ b/src/app/restablecer/restablecer.page.html
@@ -1,11 +1,15 @@
 <ion-header>
   <ion-toolbar>
     <ion-title></ion-title>
-    <a href="/login"><ion-icon name="caret-back-sharp"></ion-icon></a>
+    <a href="/login" ><ion-img style="margin: 0 auto; max-width: 30vh;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/Logo_DuocUC.svg/1067px-Logo_DuocUC.svg.png"></ion-img> 
+      <ion-icon name="arrow-back-outline" style="font-size: 25px;"></ion-icon>
+    </a>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <br>
+  <br>
   <ion-card>
     <ion-card-header>
       <ion-card-title>Restablecer Contraseña</ion-card-title>
